--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta
       http-equiv="refresh"
-      content="0; url=https://sendangharjo-bjn.desa.id/" />
+      content="0; url=https://ngantru-bjn.bjndesa.id/" />
   </head>
   <body></body>
 </html>
